--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -50,10 +50,8 @@
                 <li class='@("on".when(nav == "美食"))'><a href='@controllers.routes.Pages.faxian(0,0,1,1)'>美食</a></li>
                 <li class='@("on".when(nav == "食材"))'><a href='@controllers.routes.Pages.faxian(1,0,1,1)'>食材</a></li>
                 <li  class='@("on".when(nav == "居家"))'><a href='@controllers.routes.Pages.faxian(2,0,1,1)'>居家</a></li>
-
-
-                <li><span>-</span></li>
-                <li class='presell @("on".when(nav == "presell"))  '><a href="/presell">鲜生活</a></li>
+                <!--<li><span>-</span></li>
+                <li class='presell @("on".when(nav == "presell"))  '><a href="/presell">鲜生活</a></li>-->
                 <!--<li class='worth @("on".when(nav == "worth"))  '><a href="/worth">今天值得买</a></li>-->
                 <li><span>-</span></li>
                 <li class='@("on".when(nav == "forum"))'>  <a href="/forum" >讨论吧</a> </li>
