adjust index page

--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -40,7 +40,7 @@ nav="index"
                 }
             </div>
 
-        <ul class="navi clearfix">
+      <!--  <ul class="navi clearfix">
             @for((flash,i)<-flashes.view.zipWithIndex){
             <li @if(i==0){class="active"} @if(i==4){class="last"}>
             <span></span>
@@ -53,12 +53,12 @@ nav="index"
             </li>
             }
 
-        </ul>
+        </ul>-->
 
     </div>
     <!-- switchable  slide end-->
     <div class="bulletin fr clearfix">
-        <h3>最近热门的好玩意儿~</h3>
+       <!-- <h3>最近热门的好玩意儿~</h3>-->
         <ul>
             @for(advert<-hots){
             <li class="ofh">
@@ -85,8 +85,8 @@ nav="index"
 </div>
 <!--main box end-->
 
-<!-- 零食 start-->
-
+<!-- 美食 start-->
+ <!-- 绿色 -->
 <div class="category-top clearfix">
   <div class="top">
       <dl class="col155">
@@ -179,9 +179,40 @@ nav="index"
 
 
 </div>
-<!-- 零食  end -->
+<!-- 美食  end -->
 
 <!-- 食材 start-->
+<div class="category-top clearfix">
+    <div class="top">
+        <dl class="col155">
+            <dd class="mb10"><a> <img src="http://image.haier.com/bbs/forum/mother/201306/P020130822545739544404.jpg" width="155" height="90"></a> </dd>
+            <dd><a> <img src="http://image.haier.com/bbs/forum/mother/201306/P020130823564701618224.jpg" width="155" height="90"></a>  </dd>
+        </dl>
+        <dl class="col155">
+            <dd class="mb10"><a> <img src="http://image.haier.com/bbs/forum/mother/201306/P020130822545954740604.jpg" width="155" height="90"></a> </dd>
+            <dd><a> <img src="http://image.haier.com/bbs/forum/mother/201306/P020130822547162748910.jpg" width="155" height="90"></a>  </dd>
+        </dl>
+        <dl class="col320">
+        <dd class="org mb10">
+            <p>
+
+                <a href="http://bbs.haier.com/forum/food/93759.shtml" title="七夕爬峨眉观云海看日处" target="_blank">七夕爬峨眉观云海看日处</a>
+
+                <a href="http://bbs.haier.com/forum/food/93696.shtml" title="电视剧选词需谨慎" target="_blank">电视剧选词需谨慎</a>
+
+                <a href="http://bbs.haier.com/forum/food/93735.shtml" title="测试【你是哪种上班族】" target="_blank">测试【你是哪种上班族】</a>
+
+            </p>
+        </dd>
+        <dd><img src="http://image.haier.com/bbs/forum/mother/201306/P020130823576440791216.jpg" width="155" height="90" class="mr10"> </dd>
+        <dd><img src="http://image.haier.com/bbs/forum/mother/201306/P020130822547553334842.jpg" width="155" height="90"> </dd>
+    </dl>
+        <dl class="col310 last">
+            <dd><img src="http://image.haier.com/bbs/forum/mother/201306/P020130823567716841343.jpg" width="310" height="190"> </dd>
+        </dl>
+
+    </div>
+</div>
 
 <div class="category-main clearfix">
     <div class="category">
@@ -247,7 +278,39 @@ nav="index"
 <!-- 食材  end -->
 
 <!-- 居家 start-->
+<div class="category-top clearfix">
+    <div class="top">
+        <dl class="col310">
+            <dd><img src="http://image.haier.com/bbs/forum/employee/201306/P020130628461241884404.jpg" width="310" height="190"> </dd>
+        </dl>
+        <dl class="col155">
+            <dd class="mb10"><a> <img src="http://image.haier.com/bbs/forum/employee/201306/P020130625752466043219.jpg" width="155" height="90"></a> </dd>
+            <dd><a> <img src="http://image.haier.com/bbs/forum/employee/201306/P020130625753140340113.jpg" width="155" height="90"></a>  </dd>
+        </dl>
+        <dl class="col320">
+            <dd class="red mb10">
+                <p>
 
+                    <a href="http://bbs.haier.com/forum/food/93759.shtml" title="七夕爬峨眉观云海看日处" target="_blank">七夕爬峨眉观云海看日处</a>
+
+                    <a href="http://bbs.haier.com/forum/food/93696.shtml" title="电视剧选词需谨慎" target="_blank">电视剧选词需谨慎</a>
+
+                    <a href="http://bbs.haier.com/forum/food/93735.shtml" title="测试【你是哪种上班族】" target="_blank">测试【你是哪种上班族】</a>
+
+                </p>
+            </dd>
+            <dd><img src="http://image.haier.com/bbs/forum/employee/201306/P020130625754298231712.jpg" width="155" height="90" class="mr10"> </dd>
+            <dd><img src="http://image.haier.com/bbs/forum/employee/201306/P020130626716783645497.jpg" width="155" height="90"> </dd>
+        </dl>
+        <dl class="col155 last">
+            <dd class="mb10"><a> <img src="http://image.haier.com/bbs/forum/employee/201306/P020130625753968354264.jpg" width="155" height="90"></a> </dd>
+            <dd><a> <img src="http://image.haier.com/bbs/forum/employee/201306/P020130625753459981098.jpg" width="155" height="90"></a>  </dd>
+        </dl>
+
+
+
+    </div>
+</div>
 <div class="category-main clearfix">
     <div class="category">
         <dl class="first">
@@ -311,12 +374,61 @@ nav="index"
 </div>
 <!-- 居家  end -->
 
+<!-- new site and post start -->
+<div class="category-top clearfix">
+    <div class="top">
+        <dl class="col320">
+            <dd class="blue mb10">
+                <p>
+
+                    <a href="http://bbs.haier.com/forum/food/93759.shtml" title="七夕爬峨眉观云海看日处" target="_blank">七夕爬峨眉观云海看日处</a>
+
+                    <a href="http://bbs.haier.com/forum/food/93696.shtml" title="电视剧选词需谨慎" target="_blank">电视剧选词需谨慎</a>
+
+                    <a href="http://bbs.haier.com/forum/food/93735.shtml" title="测试【你是哪种上班族】" target="_blank">测试【你是哪种上班族】</a>
+
+                </p>
+            </dd>
+            <dd><img src="http://image.haier.com/bbs/forum/it/201306/P020130628456917452153.jpg" width="155" height="90" class="mr10"> </dd>
+            <dd><img src="http://image.haier.com/bbs/forum/it/201306/P020130903418278350370.png" width="155" height="90"> </dd>
+        </dl>
+        <dl class="col155">
+            <dd class="mb10"><a> <img src="http://image.haier.com/bbs/forum/it/201306/P020130628458450987564.jpg" width="155" height="90"></a> </dd>
+            <dd><a> <img src="http://image.haier.com/bbs/forum/it/201306/P020130628458235570316.jpg" width="155" height="90"></a>  </dd>
+        </dl>
+        <dl class="col310">
+            <dd><img src="http://image.haier.com/bbs/forum/it/201306/P020130705618886219148.jpg" width="310" height="190"> </dd>
+        </dl>
+
+        <dl class="col155 last">
+            <dd class="mb10"><a> <img src="http://image.haier.com/bbs/forum/it/201306/P020130628457631384736.jpg" width="155" height="90"></a> </dd>
+            <dd><a> <img src="http://image.haier.com/bbs/forum/it/201306/P020130628457280359211.jpg" width="155" height="90"></a>  </dd>
+        </dl>
+    </div>
+</div>
+
+  <div class="sites">
+      <div class="left">
+          <dl>
+           <dd> <a><img src=""> </a> </dd>
+           <dd> <a><img src=""> </a> </dd>
+          </dl>
+      </div>
+      <div class="middle">
+
+      </div>
+      <div class="right">
+
+      </div>
+  </div>
+<!--  new site and post end -->
 <!-- site and post start-->
  <div class="category-main clearfix">
      <div class="category">
          <div class="colmain710">
            <div class="hd">
              <h2>  <a>小镇推荐</a> </h2>
+
            </div>
            <div class="bd">
                <div class="site-list">
