--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -10,6 +10,9 @@
 }
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td { margin: 0; padding: 0}
 body, button, input, select, textarea { font: 12px Microsoft YaHei, Arial, Helvetica, sans-serif}
+/*body{
+    background: url(images/bg-v3.png) repeat transparent 0 0;
+}*/
 h1, h2, h3, h4, h5, h6 { font-size: 100%;color: #333}
 address, cite, dfn, em, var {  font-style: normal}
 code, kbd, pre, samp { font-family: courier new, courier, monospace}
