adjust smeite.com index template

--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -410,19 +410,90 @@ nav="index"
   <div class="sites">
       <div class="left">
           <dl>
-           <dd> <a><img src=""> </a> </dd>
-           <dd> <a><img src=""> </a> </dd>
+           <dd class="mt15 mb15">
+               <a href="http://bbs.haier.com/forum/knowledge/95291.shtml">  <img src="http://bbs.haier.com/data/attachment/attached/image/20130830/20130830090701_62489.png" width="380" height="220"></a>
+              <span> 您还记得小时候的玩伴吗</span>
+           </dd>
+           <dd>
+               <a href="http://bbs.haier.com/forum/knowledge/96042.shtml"> <img src="http://bbs.haier.com/data/attachment/attached/image/20130906/20130906173033_91391.png" width="380" height="220"></a>
+                <span> 你还记得您的初恋吗</span>
+           </dd>
           </dl>
       </div>
       <div class="middle">
+          <div class="mt15 ml20 mr20 clearfix">
+              <div class="fl mr5 w32"><a  href="http://bbs.haier.com/activity.php?mod=hdcontent&amp;tid=95586" title="【有奖活动】你把知识还给老师了吗？" target="_blank"><img width="90" height="90" src="http://bbs.haier.com/data/attachment/userfiles/201309021657152148.jpg"></a></div>
+              <div class="fl w65">
+                  <h4><a  href="http://bbs.haier.com/activity.php?mod=hdcontent&amp;tid=95586" title="【有奖活动】你把知识还给老师了吗？" target="_blank">【有奖活动】你把知识还给老师了吗？</a></h4>
+                  <span class="mt5">一起来考考大家，看看有没有把知识还给老师！</span>
+              </div>
+          </div>
+          <div class="clear"></div>
+          <div class="mt15 ml20 mr20 clearfix">
+              <div class="fl mr5 w32"><a  href="http://bbs.haier.com/activity.php?mod=hdcontent&amp;tid=93598" title="奇思妙想，双桶洗衣机外观设计大比拼" target="_blank"><img width="90" height="90" src="http://bbs.haier.com/data/attachment/userfile/images/20130819095515.png"></a></div>
+              <div class="fl w65">
+                  <h4><a  href="http://bbs.haier.com/activity.php?mod=hdcontent&amp;tid=93598" title="奇思妙想，双桶洗衣机外观设计大比拼" target="_blank">奇思妙想，双桶洗衣机外观设计大比拼</a></h4>
+                  <span class=" mt5">洗涤桶盖、脱水桶盖、控制盘外观设计大比拼 </span>
+              </div>
+          </div>
+          <div class="clear"></div>
+          <div class="mt15 ml20 mr20 clearfix">
+              <div class="fl mr5 w32"><a  href="http://bbs.haier.com/forum/knowledge/94938.shtml" title="【有奖调研】我为冰箱起个名儿~" target="_blank"><img width="90" height="90" src="http://bbs.haier.com/data/attachment/attached/image/20130828/20130828110037_10984.jpg"></a></div>
+              <div class="fl w65">
+                  <h4><a href="http://bbs.haier.com/forum/knowledge/94938.shtml" title="【有奖调研】我为冰箱起个名儿~" target="_blank">【有奖调研】我为冰箱起个名儿~</a></h4>
+                  <span class="mt5">上冻下藏冰箱取名时间到啦！</span>
+              </div>
+          </div>
+          <div class="clear"></div>
+          <ul class="mt20 ml15">
+              <li class="ofh"><a href="http://bbs.haier.com/forum/food/95739.shtml" title="来帮我家的洗衣机看看哇~" target="_blank">【我是生活控】来帮我家的洗衣机看看哇~</a></li>
+              <li class="ofh"><a href="http://bbs.haier.com/forum/cloud/95007.shtml" title="海尔电视陪你缅怀童年逝去的经典" target="_blank">【云端生活】海尔电视陪你缅怀童年逝去的经典</a></li>
+              <li class="ofh"><a href="http://bbs.haier.com/forum/food/93845.shtml" title="求助！大家注意过洗衣机里边的垃圾吗？" target="_blank">【我是生活控】求助！大家注意过洗衣机里边的垃圾吗？</a></li>
+              <li class="ofh"><a href="http://bbs.haier.com/forum/knowledge/95313.shtml" title="您在一年内有购买空调的打算吗？" target="_blank">【家电学堂】您在一年内有购买空调的打算吗？</a></li>
+              <li class="ofh"><a href="http://bbs.haier.com/forum/food/93845.shtml" title="求助！大家注意过洗衣机里边的垃圾吗？" target="_blank">【我是生活控】求助！大家注意过洗衣机里边的垃圾吗？</a></li>
 
+          </ul>
       </div>
       <div class="right">
+          <div>
+              <h6 class=" mt10 ml20">有奖活动</h6>
+              <ul>
+                  <li class="ofh"><a href="http://bbs.haier.com/forum/knowledge/96041.shtml" title="【有奖调研】好事成双，对开门冰箱邀你来调研" target="_blank">【有奖调研】好事成双，对开门冰箱邀你来调研</a></li>
+                  <li  class="ofh"><a href="http://bbs.haier.com/forum/knowledge/95018.shtml" title="【有奖调研】超级！积木！抽屉！冰箱邀你调研啦！！" target="_blank">【有奖调研】超级！积木！抽屉！冰箱邀你调研啦！！</a></li>
+                  <li  class="ofh"><a href="http://bbs.haier.com/forum/knowledge/95188.shtml" title="【有奖话题】一起说说“聒噪”的油烟机" target="_blank">【有奖话题】一起说说“聒噪”的油烟机</a></li>
+                  <li class="ofh"><a href="http://bbs.haier.com/forum/knowledge/96041.shtml" title="【有奖调研】好事成双，对开门冰箱邀你来调研" target="_blank">【有奖调研】好事成双，对开门冰箱邀你来调研</a></li>
+                  <li  class="ofh"><a href="http://bbs.haier.com/forum/knowledge/95018.shtml" title="【有奖调研】超级！积木！抽屉！冰箱邀你调研啦！！" target="_blank">【有奖调研】超级！积木！抽屉！冰箱邀你调研啦！！</a></li>
+                  <li  class="ofh"><a href="http://bbs.haier.com/forum/knowledge/95188.shtml" title="【有奖话题】一起说说“聒噪”的油烟机" target="_blank">【有奖话题】一起说说“聒噪”的油烟机</a></li>
+
+              </ul>
+          </div>
+          <div class="clear"></div>
+          <div class="line mt15 ml15 mr15"></div>
+          <div>
+              <h6 class="mt5 ml20">获奖公布</h6>
+              <ul>
+                  <li  class="ofh"><a href="http://bbs.haier.com/thread-88827-1-1.html" title="【获奖名单】海友们一起来畅想未来冰箱" target="_blank">【获奖名单】海友们一起来畅想未来冰箱</a></li>
+                  <li  class="ofh"><a href="http://bbs.haier.com/thread-91294-1-1.html" title="【获奖名单】一起来说说家用空气净化器" target="_blank">【获奖名单】一起来说说家用空气净化器</a></li>
+                  <li  class="ofh"><a href="http://bbs.haier.com/thread-93733-1-1.html" title=" 【获奖名单】空调制冷不满意点搜集" target="_blank"> 【获奖名单】空调制冷不满意点搜集</a></li>
+                  <li  class="ofh"><a href="http://bbs.haier.com/thread-88827-1-1.html" title="【获奖名单】海友们一起来畅想未来冰箱" target="_blank">【获奖名单】海友们一起来畅想未来冰箱</a></li>
+                  <li  class="ofh"><a href="http://bbs.haier.com/thread-91294-1-1.html" title="【获奖名单】一起来说说家用空气净化器" target="_blank">【获奖名单】一起来说说家用空气净化器</a></li>
+                  <li  class="ofh"><a href="http://bbs.haier.com/thread-93733-1-1.html" title=" 【获奖名单】空调制冷不满意点搜集" target="_blank"> 【获奖名单】空调制冷不满意点搜集</a></li>
+
+              </ul>
+          </div>
+          <div class="clear"></div>
+          <div class="line mt15 ml15 mr15"></div>
+          <div class="pl15 pt10">
+             <img src="http://localhost/images/adv/20130327-jujia-8.jpg" width="210" height="90">
+          </div>
+
 
       </div>
+
   </div>
 <!--  new site and post end -->
 <!-- site and post start-->
+<!--
  <div class="category-main clearfix">
      <div class="category">
          <div class="colmain710">
@@ -467,6 +538,7 @@ nav="index"
          </div>
      </div>
  </div>
+-->
 
 <!-- site and post end -->
 
