--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -17,8 +17,9 @@
     <script src="/admin/assets/js/jquery.admin.js"></script>
     <script src="/admin/assets/js/uploadify/jquery.uploadify-3.1.js"></script>
     <script src="/admin/assets/js/xheditor/xheditor-1.1.14-zh-cn.min.js"></script>
-    <script src="http://l.tbcdn.cn/apps/top/x/sdk.js?appkey=21136607"></script>
 
+    <script src="/admin/assets/js/ueditor/ueditor.config.js"></script>
+    <script src="/admin/assets/js/ueditor/ueditor.all.min.js"></script>
     </head>
     <body>
 
