--- a/app/views/pages/postList.scala.html
+++ b/app/views/pages/postList.scala.html
@@ -70,7 +70,7 @@ title =  "食美特，爱美食爱生活"
             @for( (item,i) <- page.items.view.zipWithIndex ){
             <div class="item @if((i+1)%2 == 0){last} ">
                 <div class="pic">
-                    <a @controllers.routes.Sites.post(item.id.get)><img src="@item.pic" width="430"> </a>
+                    <a href="@controllers.routes.Sites.post(item.id.get)"><img src="@item.pic" width="430"> </a>
                 </div>
 
                 <div class="num">
